--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "three": "^0.166.0"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^6.0.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
